apps/longhorn/overlays/prod/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: longhorn-system-prod
spec:
  type: ExternalName
  externalName: longhorn-frontend.longhorn-system.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
