apps/longhorn/overlays/prod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.lab.supermorphic.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
  tls:
    secretName: longhorn-dashboard-tls
